css/60_photos.css
/* ... */
.mly-wrapper .mapillary-attribution-container .mapillary-attribution-icon-container {
    display: flex;
    align-items: center;
}

.mapillary-attribution-image-container {
  height: auto;
}

.mly-wrapper .mapillary-attribution-container .mapillary-attribution-username {
    padding: 0px 8px 0 6px;
}

.mly-wrapper .mapillary-attribution-container .mapillary-attribution-date {
    margin-right: 6px;
}

/* KartaView viewer */
.kartaview-wrapper {
    position: relative;
    background-color: #000;
    background-image: url(img/loader-black.gif);
    background-position: center;
    background-repeat: no-repeat;
}

.kartaview-wrapper img {
    width: 100%;
    height: 100%;
    overflow: hidden;
    object-fit: cover;
}

.kartaview-wrapper .photo-attribution a:active {
    color: #20c4ff;
}
@media (hover: hover) {
    .kartaview-wrapper .photo-attribution a:hover {
        color: #20c4ff;
    }
}

.kartaview-image-wrap {
    width: 100%;
    height: 100%;
    transform-origin: 0 0;
}

.photo-wrapper {
    position: relative;
    background-color: #000;
    background-image: url(img/loader-black.gif);
    background-position: center;
    background-repeat: no-repeat;
}

.photoviewer .plane-frame {
    height: 100%;
    width: 100%;
    transform-origin: 0 0;
}

.photoviewer .plane-frame > img.plane-photo {
    width: 100%;
    height: 100%;
    overflow: hidden;
    object-fit: cover;
}

/* photo-controls (step forward, back, rotate) */
.photo-controls-wrap {
    text-align: center;
    position: absolute;
    top: 10px;
    width: 100%;
    z-index: 10;
    pointer-events: none;
}

.photo-controls {
    display: inline-block;
    z-index: 10;
    pointer-events: initial;
}

.photo-controls button,
.photo-controls button:focus {
    height: 18px;
    width: 18px;
    line-height: 18px;
    background: rgba(0,0,0,0.65);
    color: #eee;
    border-radius: 0;
}
.photo-controls button:first-of-type {
    border-radius: 3px 0 0 3px;
}
.photo-controls button:last-of-type {
    border-radius: 0 3px 3px 0;
}
.photo-controls button:active {
    background: rgba(0,0,0,0.85);
    color: #fff;
}
@media (hover: hover) {
    .photo-controls button:hover {
        background: rgba(0,0,0,0.85);
        color: #fff;
    }
}

/* local georeferenced photos */
.layer-local-photos {
    pointer-events: none;
}
.layer-local-photos .viewfield-group * {
    fill: #ed00d9;
}
.local-photos {
    display: flex;
}
.local-photos > div {
    width: 50%;
}
.local-photos > div:first-child {
    margin-right: 20px;
}

.list-local-photos {
    max-height: 40vh;
    overflow-y: scroll;
    overflow-x: auto;
    /* workaround for something like "overflow-x: visible"
       see https://stackoverflow.com/a/39554003 */
    margin-left: -100px;
    padding-left: 100px;
    margin-top: -20px;
    padding-top: 20px;
    min-height: 100px;
}
.list-local-photos::-webkit-scrollbar {
    border-left: none;
}
.list-local-photos li {
    list-style: none;
    display: flex;
    justify-content: space-between;
    height: 30px;
}
.list-local-photos span.filename {
    display: block;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 30px;
    padding-left: 8px;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
}
.list-local-photos li:first-child span.filename {
    border-top: 1px solid #ccc;
    border-top-left-radius: 4px;
}
.list-local-photos li:first-child button {
    border-top: 1px solid #ccc;
}
.list-local-photos li:first-child button.remove {
    border-top-right-radius: 4px;
}
.list-local-photos li:last-child span.filename {
    border-bottom-left-radius: 4px;
}
.list-local-photos li:last-child button.remove {
    border-bottom-right-radius: 4px;
}
.list-local-photos li.invalid button.zoom-to-data {
    display: none;
}
.list-local-photos li button.no-geolocation {
    display: none;
}
.list-local-photos li.invalid button.no-geolocation {
    display: block;
    color: red;
}
.list-local-photos .placeholder div {
    display: block;
    height: 40px;
    width: 40px;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(img/loader-black.gif);
    filter: invert(1);
}
.local-photos label.button {
    background: #7092ff;
    color: #fff;
    font-weight: bold;
    padding: 10px 25px;
    text-align: center;
    font-size: 12px;
    display: inline-block;
    border-radius: 4px;
    cursor: pointer;
}

